<resources>
    <string name="app_name">MVVM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="conf_password">Confirmasi Password</string>
    <string name="signup">Sign Up</string>
    <string name="loading">Loading</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="quote">Quote</string>
    <string name="quote_title">Quote Title</string>
    <string name="quote_author">Author Quote</string>
</resources>
