<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.redveloper.mvvm.ui.home.profil.ProfileViewModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.home.profil.ProfileFragment">

        <TextView
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            tools:text="@string/name"
            android:text="@{viewModel.user.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            tools:text="@string/email"
            android:text="@{viewModel.user.email}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>
