<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.redveloper.mvvm.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_height="match_parent"
        tools:context=".ui.auth.SignUpActivity">

        <EditText
            android:layout_marginTop="100dp"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/name"
            android:text="@={viewModel.name}"
            android:id="@+id/et_nama_signup"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill" />

        <EditText
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:text="@={viewModel.email}"
            android:id="@+id/et_email_signup"
            app:layout_constraintTop_toBottomOf="@id/et_nama_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill" />


        <EditText
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={viewModel.password}"
            android:id="@+id/et_password_signup"
            app:layout_constraintTop_toBottomOf="@id/et_email_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill" />

        <EditText
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/conf_password"
            android:text="@={viewModel.conf_password}"
            android:id="@+id/et_conf_password_signup"
            app:layout_constraintTop_toBottomOf="@id/et_password_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill" />

        <Button
            android:background="@color/colorAccent"
            android:text="@string/signup"
            android:id="@+id/btn_signup"
            android:onClick="@{viewModel::onButtonSignUpClick}"
            app:layout_constraintTop_toBottomOf="@id/et_conf_password_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:id="@+id/btn_to_login"
            android:onClick="@{viewModel::onButtonToLogin}"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb_register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>